--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@thundra/core": "^2.13.30",
     "Express": "^3.0.1",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
